--- a/time-tracker-extension_edge/popup.css
+++ b/time-tracker-extension_edge/popup.css
@@ -1,8 +1,10 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Open Sans, sans-serif;
     margin: 0;
     padding: 20px;
     text-align: center;
+    width: 470px; 
+    height: 400px;
 }
 
 h1 {
@@ -31,11 +33,59 @@ button:hover {
     background-color: #f2f2f2;
     border: 1px solid #ddd;
     color: #333;
+    text-align: left; 
 }
 
-/* Zusätzliche Stile für das Layout der Buttons */
+
 #buttonContainer {
+    display: flex;    
+    gap: 10px; 
+}
+
+#settingsContainer, #standortContainer {
     display: flex;
     justify-content: center;
-    gap: 10px; /* Abstand zwischen den Buttons */
+    align-items: center;
+    margin-bottom: 20px;
 }
+
+#pauseContainer {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    width: 100%; /* Container nimmt die volle Breite ein */
+    justify-content: flex-start; /* Inhalte nach links ausrichten */
+}
+
+#apiUrl, #standort {
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    width: 70%;
+}
+
+#pause {
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    width: auto; /* Automatische Breite basierend auf dem Inhalt */
+}
+
+#saveUrlButton {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+#saveUrlButton:hover {
+    background-color: #45a049;
+}
+
+.form-control {
+    flex: 1;
+}
+
