--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -93,6 +93,10 @@ label {
     text-align: center;
 }
 
+.table tbody tr:nth-child(odd) {
+    background-color: #f2f2f2;
+}
+
 
 .details-table {
     width: 100%;
